WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257120
REGRESSION(
264237@main
): [GTK] Minibrowser crashes while initializing ThreadedCompositor
https://bugs.webkit.org/show_bug.cgi?id=257120
Summary
REGRESSION(264237@main): [GTK] Minibrowser crashes while initializing Threade...
Alicia Boya García
Reported
2023-05-22 06:02:29 PDT
Launch minibrowser with any page about:blank (gdb) bt #0 0x00007fe1440be27e in WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 #1 0x00007fe141cd584b in WTFCrashWithInfo(int, char const*, char const*, int) () at WTF/Headers/wtf/Assertions.h:758 #2 0x00007fe14435b0ef in WTF::RunLoop::assertIsCurrent() const (this=0x7fe1300200c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:209 #3 0x00007fe14c998c06 in WTF::assertIsCurrent(WTF::SerialFunctionDispatcher const&) (queue=...) at WTF/Headers/wtf/FunctionDispatcher.h:56 #4 0x00007fe14c98a2b9 in IPC::Connection::SyncMessageState::enqueueMatchingMessages(IPC::Connection&, IPC::MessageReceiveQueue&, IPC::ReceiverMatcher const&) (this=0x21d9220, connection=..., receiveQueue=..., receiverMatcher=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:175 #5 0x00007fe14c98b4e8 in IPC::Connection::enqueueMatchingMessagesToMessageReceiveQueue(IPC::MessageReceiveQueue&, IPC::ReceiverMatcher const&) (this=0x7fe1300641e0, receiveQueue=..., receiverMatcher=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:362 #6 0x00007fe14c98b873 in IPC::Connection::addMessageReceiver(WTF::FunctionDispatcher&, IPC::MessageReceiver&, IPC::ReceiverName, unsigned long) (this=0x7fe1300641e0, dispatcher=..., receiver=..., receiverName=IPC::ReceiverName::AcceleratedSurfaceDMABuf, destinationID=11) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:407 #7 0x00007fe14d5f272b in WebKit::AcceleratedSurfaceDMABuf::didCreateGLContext() (this=0x7fe13003d080) at /app/webkit/Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.cpp:245 #8 0x00007fe14d5ff0d2 in WebKit::LayerTreeHost::didCreateGLContext() (this=0x7fe13012c1f0) at /app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:410 #9 0x00007fe14cab65dc in WebKit::ThreadedCompositor::createGLContext() (this=0x7fe13001c720) at /app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:117 #10 0x00007fe14caba18b in WebKit::ThreadedCompositor::ThreadedCompositor(WebKit::ThreadedCompositor::Client&, WebKit::ThreadedDisplayRefreshMonitor::Client&, unsigned int, WebCore::IntSize const&, float, unsigned int)::$_3::operator()() const (this=0x7fe130128da8) at /app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:87 #11 0x00007fe14caba029 in WTF::Detail::CallableWrapper<WebKit::ThreadedCompositor::ThreadedCompositor(WebKit::ThreadedCompositor::Client&, WebKit::ThreadedDisplayRefreshMonitor::Client&, unsigned int, WebCore::IntSize const&, float, unsigned int)::$_3, void>::call() (this=0x7fe130128da0) at WTF/Headers/wtf/Function.h:53 #12 0x00007fe14c4633c2 in WTF::Function<void ()>::operator()() const (this=0x7fe130128dd0) at WTF/Headers/wtf/Function.h:82 #13 0x00007fe14cab9850 in WebKit::CompositingRunLoop::performTaskSync(WTF::Function<void ()>&&)::$_1::operator()() const (this=0x7fe130128dc8) at /app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/CompositingRunLoop.cpp:81 #14 0x00007fe14cab9809 in WTF::Detail::CallableWrapper<WebKit::CompositingRunLoop::performTaskSync(WTF::Function<void ()>&&)::$_1, void>::call() (this=0x7fe130128dc0) at WTF/Headers/wtf/Function.h:53 #15 0x00007fe142ab0862 in WTF::Function<void ()>::operator()() const (this=0x7fe0b3ffe880) at WTF/Headers/wtf/Function.h:82 #16 0x00007fe14435acce in WTF::RunLoop::performWork() (this=0x7fe1301300c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #17 0x00007fe1444102e9 in WTF::RunLoop::RunLoop()::$_1::operator()(void*) const (this=0x7fe1301300c0, userData=0x7fe1301300c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #18 0x00007fe1444102c5 in WTF::RunLoop::RunLoop()::$_1::__invoke(void*) (userData=0x7fe1301300c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:79 #19 0x00007fe144410279 in WTF::RunLoop::$_0::operator()(_GSource*, int (*)(void*), void*) const (this=0x7fe0ac001b40, source=0x7fe0ac001b40, callback=0x7fe1444102b0 <WTF::RunLoop::RunLoop()::$_1::__invoke(void*)>, userData=0x7fe1301300c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #20 0x00007fe14440f475 in WTF::RunLoop::$_0::__invoke(_GSource*, int (*)(void*), void*) (source=0x7fe0ac001b40, callback=0x7fe1444102b0 <WTF::RunLoop::RunLoop()::$_1::__invoke(void*)>, userData=0x7fe1301300c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:45 #21 0x00007fe144b40c37 in g_main_dispatch (context=0x7fe0ac000b70) at ../glib/gmain.c:3419 #22 g_main_context_dispatch (context=0x7fe0ac000b70) at ../glib/gmain.c:4137 #23 0x00007fe144b97028 in g_main_context_iterate.constprop.0 (context=0x7fe0ac000b70, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4213 #24 0x00007fe144b402af in g_main_loop_run (loop=0x7fe0ac001b20) at ../glib/gmain.c:4413 #25 0x00007fe14440f9f8 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #26 0x00007fe14435b5d4 in WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::$_1::operator()() const (this=0x7fe130128d48) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114 #27 0x00007fe14435b579 in WTF::Detail::CallableWrapper<WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::$_1, void>::call() (this=0x7fe130128d40) at /app/webkit/Source/WTF/wtf/Function.h:53 #28 0x00007fe142ab0862 in WTF::Function<void ()>::operator()() const (this=0x7fe0b3ffeba0) at WTF/Headers/wtf/Function.h:82 #29 0x00007fe144366b98 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7fe13003d170) at /app/webkit/Source/WTF/wtf/Threading.cpp:250 #30 0x00007fe14441dd55 in WTF::wtfThreadEntryPoint(void*) (context=0x7fe13003d170) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:242 #31 0x00007fe13d88f1da in start_thread (arg=<optimized out>) at pthread_create.c:442 #32 0x00007fe13d917f44 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-05-23 03:04:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14234
EWS
Comment 2
2023-05-23 05:42:45 PDT
Committed
264414@main
(50514ebd7771): <
https://commits.webkit.org/264414@main
> Reviewed commits have been landed. Closing PR #14234 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug