REGRESSION(264237@main): [GTK] Minibrowser crashes while initializing ThreadedCompositor https://bugs.webkit.org/show_bug.cgi?id=257120

Reviewed by Alicia Boya Garcia.

AcceleratedSurfaceDMABuf is now a message receiver that is setting the
message receieve dispatcher from the compositing thread. Connection
expects that message receivers are added from the main connection
dispatcher thread, the main thread in this case. This patch adds new
AcceleratedSurface methods didCreateCompositingRunLoop() and
willDestroyCompositingRunLoop() called from the main thread by
LayerTreeHost and used by AcceleratedSurfaceDMABuf to add and remove the
message receiver.

* Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/CompositingRunLoop.h:
(WebKit::CompositingRunLoop::runLoop const):
* Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.h:
(WebKit::ThreadedCompositor::compositingRunLoop const):
* Source/WebKit/WebProcess/WebPage/AcceleratedSurface.h:
(WebKit::AcceleratedSurface::didCreateCompositingRunLoop):
(WebKit::AcceleratedSurface::willDestroyCompositingRunLoop):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::LayerTreeHost):
(WebKit::LayerTreeHost::~LayerTreeHost):
* Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.cpp:
(WebKit::AcceleratedSurfaceDMABuf::didCreateCompositingRunLoop):
(WebKit::AcceleratedSurfaceDMABuf::willDestroyCompositingRunLoop):
(WebKit::AcceleratedSurfaceDMABuf::didCreateGLContext):
(WebKit::AcceleratedSurfaceDMABuf::willDestroyGLContext):
* Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.h:

Canonical link: https://commits.webkit.org/264414@main