Source/WebKit/WebProcess/WebPage/AcceleratedSurface.h
@@ -28,6 +28,10 @@
 #include <WebCore/IntSize.h>
 #include <wtf/Noncopyable.h>
 
+namespace WTF {
+class RunLoop;
+}
+
 namespace WebKit {
 
 class WebPage;
@@ -55,6 +59,9 @@ public:
     virtual void finalize() { }
     virtual void willRenderFrame() { }
     virtual void didRenderFrame() { }
+
+    virtual void didCreateCompositingRunLoop(WTF::RunLoop&) { }
+    virtual void willDestroyCompositingRunLoop() { }
 
 protected:
     AcceleratedSurface(WebPage&, Client&);
